# rf-classifier

./: .gitignore  README.md  pyproject.toml
src/: dataset.py  features.py  model.py  pipeline.py  visualise.py
