[project]
name = "rf-classifier"
version = "0.1.0"
description = "RF modulation classification on RML2016.10a with hand-crafted features and a Random Forest"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
